# BIRDS

./: .gitignore  .merlin  CHANGES.md  Dockerfile  Makefile  README.md  birds.opam  dune-project  explanation.txt  input.dl  simplified.dl
benchmarks/: benchmark.sh  compare_results.sh  putbx.sh  see_results.sh
examples/: basic_sample.dl  basic_sampleo.dl  boolean.dl  bottom1.dl  delete.sql  delete_sample.dl  delete_sample.sql  diff1.dl  diff2.dl  diff3.dl  diff4.dl  dl2u1.dl  dl2u2.dl  dl2u3.dl  dl2u_2-2.dl  dl2u_error.dl  dl2u_name.dl  e1.dl  f.dl  incrementalization1.dl  incrementalization1_random.dl  incrementalization2.dl  incrementalization2_without_anonymous.dl  incrementalization2_without_anonymous_a.dl  incrementalization2_without_anonymous_b.dl  incrementalization2_without_anonymous_c.dl  incrementalization3.dl  init.dl  inlining1.dl  inlining2.dl  inlining3.dl  inlining4.dl  inlining5.dl  insert.sql  insert2.sql  insert_sample.sql  issue56.dl  issue57.dl  issue58_1.dl  issue58_2.dl  (+55 more)
src/: ast2fol.ml  ast2fol.mli  ast2ros.ml  ast2sql.ml  ast2sql.mli  ast2theorem.ml  ast2theorem.mli  bottom_up.ml  bx.ml  conn_ops.ml  conversion.ml  conversion.mli  counterexample.ml  counterexample.mli  debugger.ml  dependency_graph.mli  derivation.ml  dune  evaluation.ml  expr.ml  expr.mli  expr2.ml  expr2.mli  incrementalization.ml  incrementalization.mli  inlining.ml  lexer.mll  lvgn.ml  lvgn.mli  main.ml  memo  parser.mly  remove_bottom.ml  remove_bottom.mli  rule_abstraction.ml  rule_abstraction.mli  rule_preprocess.ml  simplification.ml  simplification.mli  sorted_rules.ml  (+6 more)
(+78 files in other folders)
